feat: improve parameter parsing from pdf